trunk/Archive2/4d/e0ee8be98d8251/output
main.cpp:8:7: error: template argument for non-type template parameter is treated as function type 'int ()'
    X<int()>  x3; //error  
      ^~~~~
main.cpp:2:14: note: template parameter is declared here
template<int N> struct X{};
             ^
1 error generated.
